--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.19.1",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
